--- a/base.css
+++ b/base.css
@@ -209,6 +209,7 @@ a{
     color: white;
     margin: 8px 10px;
     vertical-align: middle;
+    background-color: yellow;
 }
 #LookLink{
 	background-color: #2f2f2f;
@@ -232,8 +233,44 @@ a{
 }
 										/* -->>> Pop-Up Window <<<-- */
 
+#LookLink {
+  cursor: pointer;
+  transition: all 0.5s;
+}
+.Overlay {
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+}
+.Overlay:target{
+  visibility: visible;
+  opacity: 1;
+  z-index: 1;
+}
+.PopUpBox {
+  margin: 200px auto;
+  padding: 20px;
+  background: white;
+  border-radius: 5px;
+  width: 50%;
+  position: relative;
+  transition: all 1.5s ease-in;
+}
+.Close{
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 1s;
+}
 
 /* ------------------------------------------>>> PERSONAL BLOG <<<---------------------------------------- */
+
 #PersonalBlog{
  	background-color: #f5f5f5;
 	width: 100%;
@@ -254,7 +291,6 @@ a{
   background: #2b2b2b;
   color: white;
 }
-
 
 /* ------------------------------------------>>> CRAFTED IN ZURICH <<<----------------------------------- */
 
