--- a/base.css
+++ b/base.css
@@ -65,7 +65,6 @@ a{
 /* ------------------------------------------>>> ABOUT ME <<<---------------------------------------- */
 
 #AboutMeCont p{
-	font-size: 16px;
 	margin: 0 auto;
 	width: 80%;
 	padding: 24px;
@@ -107,27 +106,24 @@ a{
 
 /* ------------------------------------------>>> TECHNICAL SKILLS <<<------------------------------------ */
 
+
 #TechSkillsCont{
-	padding: 50px;
+	padding: 50px 0px;
 	background-color: #f5f5f5;
 }
 #Chart{
-	height: 370px;
-	width: 70%;
-	text-align: justify;
-	margin: 0 auto;
-	padding-top: 50px;
-}
-.stretch {
-    width: 100%;
-    display: inline-block;
+	height: 350px;
+	display: -webkit-flex;
+	flex-form: row nowrap;
+	align-items: flex-end;
+	justify-content: center;
 }
 .Bars{
-    width: 23%;
-    display: inline-block;
-    vertical-align: bottom;
-   	color: white;
-   	position: relative;
+	margin: 0 1%;
+	width: 12%;
+	min-width: 80px;
+	color: white;
+	position: relative;
 }
 .Bars div{
 	width: 100%;
@@ -182,8 +178,15 @@ a{
 .NavItem:hover{
 	background-color: #05cc50;
 }
+#PortfolioCont{
+ 	display: -webkit-flex;
+
+	-webkit-flex-flow: row wrap;
+	justify-content: space-around;
+}
 #PortIcon{
 	width: 250px;
+	margin: 10px 20px;
 	text-align: center;
 	position: relative;
 	display: inline-block;
@@ -208,7 +211,6 @@ a{
     color: white;
     margin: 8px 10px;
     vertical-align: middle;
-    background-color: yellow;
 }
 #LookLink{
 	background-color: #2f2f2f;
@@ -226,6 +228,7 @@ a{
 
 	-webkit-transition: background 1s, height 1s;
 }
+
 #PortIcon:hover #LookLink{
 	width: 80%;
 	-webkit-transform: rotateY(360deg);
@@ -254,11 +257,11 @@ a{
   z-index: 1;
 }
 .PopUpBox {
-  margin: 200px auto;
+  margin: 100px auto;
   padding: 20px;
   background: white;
   border-radius: 5px;
-  width: 50%;
+  width: 30%;
   position: relative;
   transition: all 1.5s ease-in;
 }
@@ -268,6 +271,10 @@ a{
   right: 30px;
   transition: all 1s;
 }
+.PopUpContent img{
+  width: 80%;
+}
+
 
 /* ------------------------------------------>>> PERSONAL BLOG <<<---------------------------------------- */
 
@@ -278,19 +285,37 @@ a{
 #BlogHead hr{
 	width: 50%;
 }
+#ContBlog{
+	display: -webkit-flex;
+	flex-form: row wrap;
+}
+#BlogEntry{
+	display: -webkit-flex;
+	flex-form: row nowrap;
+	background-color: white;
+}
 #BlogUser{
 	background-color: #2b2b2b;
-	width: 100%;
+	padding: 20px;
 	text-align: center;
 	color: white;
 }
 #BlogInfo{
-	background-color: white;
+	padding: 20px;
+}
+#MiniBlogCont{
+	display: -webkit-flex;
+  	flex-direction: column;
+  	justify-content: space-around;
 }
 #MiniBlog{
-  background: #2b2b2b;
-  color: white;
+ 	background: #2b2b2b;
+  	color: white;
+  	width: 140px;
+  	margin: 10px 0px 0px 10px;
+  	padding: 10px;
 }
+
 
 /* ------------------------------------------>>> CRAFTED IN ZURICH <<<----------------------------------- */
 
@@ -305,14 +330,19 @@ a{
 	padding: 20px 20px 75px 20px;
 	text-align: center;
 }
-.ContCol{
+#SupportCont{
+	display: -webkit-flex;
+	-webkit-flex-flow: row wrap;
+	justify-content: center;
+}
+.SupportCol{
 	display: inline-block;
 	vertical-align: top;
 	text-align: left;
-	width: 28%;
+	width: 325px;
 	padding: 18px;
 }
-.ContCol p{
+.SupportCol p{
 	padding: 16px 0px;
 }
 button, input{
@@ -329,6 +359,29 @@ button, input{
 	color: white;
 }
 
+/* ------------------------------------------>>> MEDIA QUERYS <<<---------------------------------- */
+
+@media screen and (max-width:768px) {
+
+/*Bar Chart*/
+
+.Bars div:nth-child(1){ /* percentage */
+    font-size: 24px;
+}
 
 
+/*Blog*/
+
+#ContBlog, #BlogEntry{
+	flex-direction:column; 
+}
+#MiniBlogCont {
+	flex-direction: row;
+}
+#MiniBlog{
+	margin: 0 auto;
+	border: 1px solid #f5f5f5;
+}
+
+}
 
