--- a/base.css
+++ b/base.css
@@ -28,18 +28,21 @@ a{
 
 #NavBar{
 	background-color: #222222;
-	height: 50px;
 	width: 100%;
 	position: fixed;
 	z-index: 1;
 }
 #NavBar ul li{
 	display: inline-block;
-	line-height: 50px;
-	margin-left: 18px;
+	text-align: center;
+	margin-top: 10px;
 }
 #NavBar ul li a{
 	color: white;
+}
+.icon{
+	width: 50px;
+	padding: 10px 15px;
 }
 
 /* ------------------------------------------>>> HEADER <<<------------------------------------------ */
